# epgd-plugin-tvsp

./: .gitignore  CMakeLists.txt  Makefile  README.md  tvsp.c  tvsp.h
configs/: channelmap.conf-tvsp-astra  epgd.conf  tvsp-category.xml  tvsp-iso-8859-1.xsl  tvsp-utf-8.xsl  tvsp.xsl
